--- a/GeoQuiz/app/src/main/res/values/strings.xml
+++ b/GeoQuiz/app/src/main/res/values/strings.xml
@@ -4,6 +4,10 @@
     <string name="false_button">False</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">Incorrect!</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgement_toast">Cheating is wrong.</string>
     <!-- Questions -->
     <string name="question1">MongoDB is the web framework in the MEAN stack.</string> <!-- false -->
     <string name="question2">Node.js is the web server in the MEAN stack.</string> <!-- false -->
